--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header {
   justify-content: space-between;
 
   background: #ffffff;
-  padding: 16px 120px;
+  padding: 16px 100px;
   border-bottom: 1px solid #000;
 }
 
@@ -33,11 +33,13 @@ body {
 
   display: flex;
   flex-direction: column;
+   font-family: 'Lora', serif;
+  font-size: 17px;
+  line-height: 1.8;
+
+  
 }
 
-main {
-  flex: 1;
-}
 
 footer {
   text-align: center;
@@ -51,10 +53,10 @@ footer {
 }
 
 .banner img {
-  width: 100%;        /* на всю ширину */
-  height: 100vh;       /* висота банера */
-  object-fit: cover; /* обрізає, а не тягне */
-  display: block;     /* прибирає білий зазор знизу */
+  width: 100%;       
+  height: 100vh;       
+  object-fit: cover; 
+  display: block;     
   object-position: top;
 }
 
@@ -64,3 +66,89 @@ footer {
   letter-spacing: 3px;
   font-weight: 600;
 }
+
+.container {
+  
+  margin: 0 auto;
+  padding: 20px 300px;
+}
+
+a {
+  text-decoration: none;
+  color: black; 
+}
+
+a:hover {
+  color:  gray;
+}
+
+.container p {
+  margin-bottom: 42px;
+}
+
+h2 {
+     text-indent: 30px;
+}
+
+.btn {
+    font-style: oblique;
+}
+
+.menu-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.menu-text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+
+.arrow {                 /*https://www.youtube.com/watch?v=4Lj9PVcdQgo - arrow guide */
+  display: inline-block;
+  font-size: 10px;
+  margin-left: 4px;
+  transform: scale(2.1);
+
+  transition: transform 0.3s ease;
+}
+
+.dropdown {
+  position: absolute;
+  top: 160%;
+  left: 0;
+
+  background: #ffffff;
+  border: 1px solid #000;
+  min-width: 220px;
+
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(10px);
+  transition: 0.3s ease;
+}
+
+.dropdown a {
+  display: block;
+  padding: 10px 16px;
+  font-size: 13px;
+}
+
+.menu-item:hover .dropdown {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.menu-item:hover .arrow {
+  transform: rotate(180deg);
+ 
+}
+
+
