--- a/memst.css
+++ b/memst.css
@@ -7,7 +7,7 @@ header {
   align-items: center;
   justify-content: space-between;
 
-  background: #000000;
+  background: #ffffff;
   padding: 16px 100px;
   border-bottom: 1px solid #000;
 }
@@ -19,7 +19,7 @@ nav {
 
 nav a {
   text-decoration: none;  
-  color: #ffffff;          
+  color: #000000;          
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
@@ -45,8 +45,8 @@ footer {
   text-align: center;
   padding: 5px 40px;
   border-top: 1px solid #000000;
-  background: #000000;
-  color: #ffffff;
+  background: #ffffff;
+  color: #000000;
 }
 
 .logo {
@@ -54,16 +54,14 @@ footer {
   font-size: 20px;
   letter-spacing: 3px;
   font-weight: 600;
-  color: #ffffff;
+  color: #000000;
 }
-
-
 
 .menu-item {
   position: relative;
   display: flex;
   align-items: center;
-  color: #ffffff; /*fg color*/
+  color: #000000; /*fg color*/
 }
 
 .menu-text {
@@ -73,7 +71,7 @@ footer {
   text-transform: uppercase;
   font-weight: 500;
   cursor: pointer;
-  color: #ffffff;
+  color: #000000;
 }
 
 
@@ -91,7 +89,7 @@ footer {
   top: 160%;
   left: 0;
 
-  background: #000000;
+  background: #ffffff;
   border: 1px solid #000;
   min-width: 220px;
 
@@ -118,15 +116,72 @@ footer {
  
 }
 
-.fg {
+.row {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 40px;
+  margin-top: 70px;
+}
+
+.row.reverse {
+  flex-direction: row-reverse;
+}
+
+.container {
+  padding: 0 320px;     /* відстань зліва і справа */
+}
+
+h2{
+  text-indent: 20px;
+}
+
+.image1 {
+  width: 900px;
+}
+
+.image2 {
+  width: 900px;
+}
+
+.simg {
   width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 60px;
 }
 
-.fg img {
-  width: 100%;       
-  height: 100vh;       
-  object-fit: cover; 
-  display: block;     
-  object-position: top;
+.image3 {
+  width: 600px;
+  margin: 0 auto
 }
 
+.image4 {
+  width: 600px;
+  margin: 0 auto
+}
+
+.image5 {
+  width: 600px;
+  margin: 0 auto
+}
+
+.image6 {
+  width: 800px;
+  margin: 0 auto
+}
+
+.video.shorts {
+  width: 360px;
+  max-width: 100%;
+  aspect-ratio: 9 / 16;
+  margin: 40px auto;
+}
+
+.video iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
