--- a/style.css
+++ b/style.css
@@ -151,4 +151,24 @@ h2 {
  
 }
 
+.row {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.row.reverse {
+  flex-direction: row-reverse;
+}
+
+.text, .image {
+  flex: 1;
+}
+
+.image img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 
