--- a/fg.css
+++ b/fg.css
@@ -130,3 +130,75 @@ footer {
   object-position: top;
 }
 
+#menu-toggle {
+  display: none;
+}
+
+.burger {
+  display: none;
+  flex-direction: column;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.burger span {
+  width: 26px;
+  height: 2px;
+  background: rgb(255, 255, 255);
+}
+
+/*adaptive*/
+@media (max-width: 768px) {
+
+  header {
+    padding: 16px 20px;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .menu {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: #000000;;
+
+    flex-direction: column;
+    gap: 18px;
+    padding: 20px;
+
+    border-bottom: 1px solid black;
+    display: none;
+  }
+
+  #menu-toggle:checked + .burger + .menu {
+    display: flex;
+  }
+
+  .menu-item {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .dropdown {
+    position: static;
+    opacity: 1;
+    visibility: visible;
+    border: none;
+    padding-left: 15px;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .container {
+    padding: 20px;
+  }
+
+  h2 {
+    text-indent: 0;
+  }
+}
