--- a/linkst.css
+++ b/linkst.css
@@ -7,9 +7,9 @@ header {
   align-items: center;
   justify-content: space-between;
 
-  background:#E0218A;
+  background: #ffffff;
   padding: 16px 100px;
-  border-bottom: 1px solid #E0218A;;
+  border-bottom: 1px solid #000;
 }
 
 nav {
@@ -19,7 +19,7 @@ nav {
 
 nav a {
   text-decoration: none;  
-  color: #ffffff;          
+  color: #000000;          
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
@@ -44,9 +44,9 @@ body {
 footer {
   text-align: center;
   padding: 5px 40px;
-  border-top: 1px solid #E0218A;
-  background: #E0218A;
-  color: #ffffff;
+  border-top: 1px solid #000000;
+  background: #ffffff;
+  color: #000000;
 }
 
 .logo {
@@ -54,16 +54,14 @@ footer {
   font-size: 20px;
   letter-spacing: 3px;
   font-weight: 600;
-  color: #ffffff;
+  color: #000000;
 }
-
-
 
 .menu-item {
   position: relative;
   display: flex;
   align-items: center;
-  color: #ffffff; /*fg color*/
+  color: #000000; /*fg color*/
 }
 
 .menu-text {
@@ -73,7 +71,7 @@ footer {
   text-transform: uppercase;
   font-weight: 500;
   cursor: pointer;
-  color: #ffffff;
+  color: #000000;
 }
 
 
@@ -91,8 +89,8 @@ footer {
   top: 160%;
   left: 0;
 
-  background: #E0218A;
-  border: 1px solid #E0218A;
+  background: #ffffff;
+  border: 1px solid #000;
   min-width: 220px;
 
   opacity: 0;
@@ -118,17 +116,48 @@ footer {
  
 }
 
-.fg {
-  width: 100%;
+.row {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 40px;
+  margin-top: 70px;
 }
 
-.fg img {
-  width: 100%;       
-  height: 100vh;       
-  object-fit: cover; 
-  display: block;     
-  object-position: top;
+.row.reverse {
+  flex-direction: row-reverse;
 }
+
+.container {
+  padding: 0 320px;     /* відстань зліва і справа */
+}
+
+.innera {
+  border-top: 1px solid #000;
+}
+
+.innera a{
+  text-decoration: none;
+ color: rgb(79, 34, 0);
+  font-style: oblique;
+}
+
+.ip {
+  border-top: 1px solid #000;
+}
+
+h2{
+  text-indent: 20px;
+}
+
+h3{
+  text-indent: 20px;
+}
+
+a:hover {
+  color:  gray;
+}
+
 
 #menu-toggle {
   display: none;
@@ -144,7 +173,7 @@ footer {
 .burger span {
   width: 26px;
   height: 2px;
-  background: rgb(255, 255, 255);
+  background: black;
 }
 
 /*adaptive*/
@@ -163,7 +192,7 @@ footer {
     top: 70px;
     left: 0;
     width: 100%;
-    background: #E0218A;;
+    background: white;
 
     flex-direction: column;
     gap: 18px;
