--- a/memst.css
+++ b/memst.css
@@ -132,8 +132,14 @@ footer {
   padding: 0 320px;     /* відстань зліва і справа */
 }
 
+
 h2{
   text-indent: 20px;
+}
+
+.image0 {
+  width: 400px;
+   margin: 0 auto
 }
 
 .image1 {
@@ -185,3 +191,95 @@ h2{
   height: 100%;
   border: 0;
 }
+
+#menu-toggle {
+  display: none;
+}
+
+.burger {
+  display: none;
+  flex-direction: column;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.burger span {
+  width: 26px;
+  height: 2px;
+  background: black;
+}
+
+/*adaptive*/
+@media (max-width: 768px) {
+
+  header {
+    padding: 16px 20px;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .menu {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: white;
+
+    flex-direction: column;
+    gap: 18px;
+    padding: 20px;
+
+    border-bottom: 1px solid black;
+    display: none;
+  }
+
+  #menu-toggle:checked + .burger + .menu {
+    display: flex;
+  }
+
+  .menu-item {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .dropdown {
+    position: static;
+    opacity: 1;
+    visibility: visible;
+    border: none;
+    padding-left: 15px;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .container {
+    padding: 20px;
+  }
+
+  h2 {
+    text-indent: 0;
+  }
+}
+
+  .image0,
+  .image1,
+  .image2,
+  .image3,
+  .image4,
+  .image5,
+  .image6 {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  .simg {
+    width: 100%;
+    height: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
