--- a/whyst.css
+++ b/whyst.css
@@ -132,64 +132,20 @@ footer {
   padding: 0 320px;     /* відстань зліва і справа */
 }
 
-
 h2{
   text-indent: 20px;
 }
 
-.image0 {
-  width: 400px;
-   margin: 0 auto
-}
-
-.image1 {
-  width: 900px;
-}
-
-.image2 {
-  width: 900px;
-}
 
 .simg {
   width: 100%;
   height: auto;
   display: block;
-  margin: 0 auto;
-  margin-top: 100px;
-  margin-bottom: 60px;
 }
 
-.image3 {
-  width: 600px;
-  margin: 0 auto
-}
-
-.image4 {
-  width: 600px;
-  margin: 0 auto
-}
-
-.image5 {
-  width: 600px;
-  margin: 0 auto
-}
-
-.image6 {
-  width: 800px;
-  margin: 0 auto
-}
-
-.video.shorts {
-  width: 360px;
-  max-width: 100%;
-  aspect-ratio: 9 / 16;
-  margin: 40px auto;
-}
-
-.video iframe {
-  width: 100%;
-  height: 100%;
-  border: 0;
+.image2 {
+  width: 6000px;
+   margin-right: 80px;
 }
 
 #menu-toggle {
@@ -264,23 +220,18 @@ h2{
     text-indent: 0;
   }
 
-.image0,
-  .image1,
+    .row,
+  .row.reverse {
+    flex-direction: column;
+  }
+
+  .image,
   .image2,
   .image3,
   .image4,
   .image5,
   .image6 {
     width: 100%;
-    max-width: 100%;
-    margin: 0 auto;
+    margin: 0;
   }
-
 }
-
-  .simg {
-    width: 100%;
-    height: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
