--- a/linkst.css
+++ b/linkst.css
@@ -231,3 +231,16 @@ a:hover {
     text-indent: 0;
   }
 }
+
+.logo a{
+  text-decoration: none;
+  color: #000;
+}
+
+.logo a:hover{
+  color: grey;
+}
+
+a:hover {
+  color:  gray;
+}
