--- a/memst.css
+++ b/memst.css
@@ -284,3 +284,16 @@ h2{
     margin-top: 40px;
     margin-bottom: 40px;
   }
+
+  .logo a{
+  text-decoration: none;
+  color: #000;
+}
+
+.logo a:hover{
+  color: grey;
+}
+
+a:hover {
+  color:  gray;
+}
