--- a/biost.css
+++ b/biost.css
@@ -133,7 +133,7 @@ footer {
 }
 
 .container {
-  padding: 0 320px;     /* відстань зліва і справа */
+  padding: 0 320px;     /* L and R dist */
 }
 
 h2{
